<resources>
    <string name="app_name">SoS</string>
    <string name="login">Нэвтрэх</string>
    <string name="register">Бүртгүүлэх</string>
    <string name="lname">Овог</string>
    <string name="fname">Нэр</string>
    <string name="age">Нас</string>
    <string name="gender">Хүйс</string>
    <string name="phone">Утас</string>
    <string name="who">Хэн болох</string>
    <string name="dad">Аав</string>
    <string name="mom">Ээж</string>
    <string name="ybro">Дүү</string>
    <string name="bro">Ах</string>
    <string name="sis">Эгч</string>
    <string name="dugaar">Дугаар</string>
    <string name="password">Нууц үг</string>
    <string name="password2">Нууц үг давтах</string>
    <string name="error.dugaar">Дугаараа оруулна уу</string>
    <string name="error.lname">Овогоо оруулна уу</string>
    <string name="error.fname">Нэрээ оруулна уу</string>
    <string name="error.password">Нууц үгээ оруулна уу</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
