<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg_app_dark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="30dp"
                android:src="@drawable/logo" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

            </FrameLayout>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:paddingTop="-10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/userNameEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"
                        android:hint="@string/dugaar" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userview"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/passwordEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/md_red_500" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passView"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/selector_login_btn"
                    android:text="@string/login"
                    android:textColor="#Ffff"
                    android:textColorHint="@color/md_red_500" />

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginBtn"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/selector_register_btn"
                    android:text="@string/register"
                    android:textColor="#Ffff" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/registerBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/footer" />
            </android.support.percent.PercentRelativeLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/view_loading" />
</FrameLayout>
